{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 224,
  "lineage": "fc90c056-c86f-78c8-ff3e-ec66ded97c32",
  "resources": [
    {
      "module": "module.ALB_Security_Group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119001757052:security-group/sg-0f505d861e615c365",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f505d861e615c365",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "119001757052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2dc0c334fb44d2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.Amex-devops-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba0846e66ae41aaa",
            "association_id": "eipassoc-08e8b2158d7d5124f",
            "domain": "vpc",
            "id": "eipalloc-0ba0846e66ae41aaa",
            "instance": "i-055f4b95601d54900",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d20faaff3180d66f",
            "private_dns": "ip-10-0-3-106.ec2.internal",
            "private_ip": "10.0.3.106",
            "public_dns": "ec2-34-228-104-98.compute-1.amazonaws.com",
            "public_ip": "34.228.104.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.Amex-devops-ec2.aws_instance.Amex-devops-ec2",
            "module.VPC-DEVOPS-Subnet-1b.aws_subnet.VPC-DEVOPS-Subnet",
            "module.VPC-DEVOPS.aws_internet_gateway.gw",
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.Amex-devops-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Amex-devops-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e46074ae430fba6",
            "arn": "arn:aws:ec2:us-east-1:119001757052:instance/i-055f4b95601d54900",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055f4b95601d54900",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d20faaff3180d66f",
            "private_dns": "ip-10-0-3-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.106",
            "public_dns": "ec2-34-228-104-98.compute-1.amazonaws.com",
            "public_ip": "34.228.104.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-062a0815a3923f0d3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f97ab6aecce47854",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1d3779fb4532fa9"
            ]
          },
          "dependencies": [
            "module.VPC-DEVOPS-Subnet-1b.aws_subnet.VPC-DEVOPS-Subnet",
            "module.VPC-DEVOPS.aws_internet_gateway.gw",
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.Application_load_balance",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:119001757052:loadbalancer/app/Amexalb/b93d125ba1b28150",
            "arn_suffix": "app/Amexalb/b93d125ba1b28150",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Amexalb-1057696271.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:119001757052:loadbalancer/app/Amexalb/b93d125ba1b28150",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Amexalb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f505d861e615c365"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e32ba48565a1b0b6"
              },
              {
                "subnet_id": "subnet-0f97ab6aecce47854"
              }
            ],
            "subnets": [
              "subnet-0e32ba48565a1b0b6",
              "subnet-0f97ab6aecce47854"
            ],
            "tags": {
              "Name": "ALB-Internet_facing"
            },
            "tags_all": {
              "Name": "ALB-Internet_facing"
            },
            "vpc_id": "vpc-0e2dc0c334fb44d2b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ALB_Security_Group.aws_security_group.ALB_Security_Group",
            "module.VPC-DEVOPS-Subnet-1b.aws_subnet.VPC-DEVOPS-Subnet",
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.Application_load_balance",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:119001757052:listener/app/Amexalb/b93d125ba1b28150/bd5237b48565786c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:119001757052:targetgroup/VPC-DEVOPS-amex-ec2/007cc56fa6e6a59c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:119001757052:listener/app/Amexalb/b93d125ba1b28150/bd5237b48565786c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:119001757052:loadbalancer/app/Amexalb/b93d125ba1b28150",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB_Security_Group.aws_security_group.ALB_Security_Group",
            "module.Application_load_balance.aws_lb.Application_load_balancer",
            "module.Application_load_balance.aws_lb_target_group.aws_target_group",
            "module.VPC-DEVOPS-Subnet-1b.aws_subnet.VPC-DEVOPS-Subnet",
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.Application_load_balance",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:119001757052:targetgroup/VPC-DEVOPS-amex-ec2/007cc56fa6e6a59c",
            "arn_suffix": "targetgroup/VPC-DEVOPS-amex-ec2/007cc56fa6e6a59c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:119001757052:targetgroup/VPC-DEVOPS-amex-ec2/007cc56fa6e6a59c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "VPC-DEVOPS-amex-ec2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e2dc0c334fb44d2b"
          },
          "dependencies": [
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.Application_load_balance",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "amex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:119001757052:targetgroup/VPC-DEVOPS-amex-ec2/007cc56fa6e6a59c-20230427093853353300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:119001757052:targetgroup/VPC-DEVOPS-amex-ec2/007cc56fa6e6a59c",
            "target_id": "10.0.3.251"
          },
          "dependencies": [
            "module.Application_load_balance.aws_lb_target_group.aws_target_group",
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-DEVOPS",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119001757052:internet-gateway/igw-027db9dc1db405992",
            "id": "igw-027db9dc1db405992",
            "owner_id": "119001757052",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0e2dc0c334fb44d2b"
          },
          "dependencies": [
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-DEVOPS",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-DEVOPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119001757052:vpc/vpc-0e2dc0c334fb44d2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030d1a9360b4d36de",
            "default_route_table_id": "rtb-0168f961caf7a3533",
            "default_security_group_id": "sg-0a1d3779fb4532fa9",
            "dhcp_options_id": "dopt-04ddf2b684dafccba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2dc0c334fb44d2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0168f961caf7a3533",
            "owner_id": "119001757052",
            "tags": {
              "Name": "VPC-DEVOPS"
            },
            "tags_all": {
              "Name": "VPC-DEVOPS"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPC-DEVOPS-Subnet-1b[\"subnet-az-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPC-DEVOPS-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119001757052:subnet/subnet-0cbfc529d04e50ec3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbfc529d04e50ec3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119001757052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-DEVOPS"
            },
            "tags_all": {
              "Name": "VPC-DEVOPS"
            },
            "vpc_id": "vpc-0e2dc0c334fb44d2b"
          },
          "dependencies": [
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-DEVOPS-Subnet-1b[\"subnet-az-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPC-DEVOPS-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119001757052:subnet/subnet-0e32ba48565a1b0b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e32ba48565a1b0b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119001757052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-DEVOPS"
            },
            "tags_all": {
              "Name": "VPC-DEVOPS"
            },
            "vpc_id": "vpc-0e2dc0c334fb44d2b"
          },
          "dependencies": [
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-DEVOPS-Subnet-1b[\"subnet-az-1c\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPC-DEVOPS-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119001757052:subnet/subnet-0f97ab6aecce47854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f97ab6aecce47854",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119001757052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-DEVOPS"
            },
            "tags_all": {
              "Name": "VPC-DEVOPS"
            },
            "vpc_id": "vpc-0e2dc0c334fb44d2b"
          },
          "dependencies": [
            "module.VPC-DEVOPS.aws_vpc.VPC-DEVOPS"
          ]
        }
      ]
    }
  ]
}